# cmakeonaplate

./: .gitignore  .travis.yml  INSTALL.md  README.md  appveyor.yml  todo.txt
ci/appveyor/: before_build.bat  build_client1.bat  build_client2.bat  build_client3.bat  build_library.bat  install_googletest.bat  test_script.bat
ci/travis/: build_client1.sh  build_client2.sh  build_client3.sh  build_library.sh  install_googletest.sh
client/: win32build.bat  win32build_foolib_DIR.bat
client/fooclient/: CMakeLists.txt  win32build.bat
clients/client1/: CMakeLists.txt  README.md
clients/client2/: CMakeLists.txt  README.md  client.cpp
clients/client3/: CMakeLists.txt  README.md
clients/client3/cmake/: Findfoolib.cmake
references/: README.md
